Implement `DataType#implicitCast` for all data types.