@@ -29,7 +29,7 @@ import org.locationtech.spatial4j.context.jts.JtsSpatialContext;
 import org.locationtech.spatial4j.shape.Point;
 import org.locationtech.spatial4j.shape.impl.PointImpl;
 
-import java.util.Arrays;
+import java.util.List;
 
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.is;
@@ -51,7 +51,7 @@ public class GeoPointTypeTest extends CrateUnitTest {
 
     @Test
     public void testWktToGeoPointValue() throws Exception {
-        Point value = DataTypes.GEO_POINT.value("POINT(1 2)");
+        Point value = DataTypes.GEO_POINT.implicitCast("POINT(1 2)");
         assertThat(value.getX(), is(1.0d));
         assertThat(value.getY(), is(2.0d));
     }
@@ -61,44 +61,43 @@ public class GeoPointTypeTest extends CrateUnitTest {
         expectedException.expect(IllegalArgumentException.class);
         expectedException.expectMessage("Cannot convert \"POINT(54.321 -123.456)\" to geo_point." +
             " Bad Y value -123.456 is not in boundary Rect(minX=-180.0,maxX=180.0,minY=-90.0,maxY=90.0)");
-        DataTypes.GEO_POINT.value("POINT(54.321 -123.456)");
+        DataTypes.GEO_POINT.implicitCast("POINT(54.321 -123.456)");
     }
 
     @Test
     public void testValueConversionFromList() throws Exception {
-        Point value = DataTypes.GEO_POINT.value(Arrays.asList(10.0, 20.2));
+        Point value = DataTypes.GEO_POINT.implicitCast(List.of(10.0, 20.2));
         assertThat(value.getX(), is(10.0d));
         assertThat(value.getY(), is(20.2d));
     }
 
     @Test
     public void testConversionFromObjectArrayOfIntegers() throws Exception {
-        Point value = DataTypes.GEO_POINT.value(new Object[]{1, 2});
+        Point value = DataTypes.GEO_POINT.implicitCast(new Object[]{1, 2});
         assertThat(value.getX(), is(1.0));
         assertThat(value.getY(), is(2.0));
     }
 
     @Test
     public void testConversionFromIntegerArray() throws Exception {
-        Point value = DataTypes.GEO_POINT.value(new Integer[]{1, 2});
+        Point value = DataTypes.GEO_POINT.implicitCast(new Integer[]{1, 2});
         assertThat(value.getX(), is(1.0));
         assertThat(value.getY(), is(2.0));
     }
 
     @Test
-    public void testConversionFromArrayType() {
-        assertThat(new ArrayType(DataTypes.LONG).isConvertableTo(GeoPointType.INSTANCE, false), is(true));
+    public void test_cast_double_geo_point_value_with_invalid_latitude_throws_exception() {
+        expectedException.expect(IllegalArgumentException.class);
+        expectedException.expectMessage(
+            "Failed to validate geo point [lon=54.321000, lat=-123.456000], not a valid location.");
+        DataTypes.GEO_POINT.implicitCast(new Double[]{54.321, -123.456});
     }
 
     @Test
-    public void testInvalidLatitude() throws Exception {
-        expectedException.expectMessage("Failed to validate geo point [lon=54.321000, lat=-123.456000], not a valid location.");
-        DataTypes.GEO_POINT.value(new Double[]{54.321, -123.456});
-    }
-
-    @Test
-    public void testInvalidLongitude() throws Exception {
-        expectedException.expectMessage("Failed to validate geo point [lon=-187.654000, lat=123.456000], not a valid location.");
-        DataTypes.GEO_POINT.value(new Double[]{-187.654, 123.456});
+    public void test_cast_double_geo_point_value_with_invalid_longitude_throws_exception() {
+        expectedException.expect(IllegalArgumentException.class);
+        expectedException.expectMessage(
+            "Failed to validate geo point [lon=-187.654000, lat=123.456000], not a valid location.");
+        DataTypes.GEO_POINT.implicitCast(new Double[]{-187.654, 123.456});
     }
 }
